# Worker_Selection_App

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  run.ps1  setup.cfg  ТЗ.md
.github/workflows/: main.yml
app/ai/: extractor.py  interviewer.py  transcriber.py  tts.py
app/api/: database.py  models_db.py  routes.py
app/core/: config.py  schemas.py
app/ml/: feature_contract.py  generator.py  model.pkl  predictor.py
app/services/: __init__.py  ai_service.py  analyze_service.py  interview_service.py  ml_service.py  storage_service.py
app/ui/: dashboard_api.py
data/: train_dataset.csv
genai-project/: main.py  rebuild.bat  requirements.txt  run.ps1  sample.txt  sample2.txt  start.bat  stun_test.py  test.py  test2.py
genai-project/Worker_Selection_App/: f381e64d-bb4c-423f-b368-ab0d65c88b3a.txt
genai-project/app/ai/: extractor.py  extractor_legacy.py  interviewer.py  models.py  transcriber.py  tts.py
genai-project/app/api/: database.py  models_db.py  routes.py  services.py
genai-project/app/core/: config.py  enums.py  schemas.py  state.py  types.py
genai-project/app/frontend/: app.js  index.html  styles.css
genai-project/app/ml/: generator.py  model.pkl  predictor.py
genai-project/app/ml_legacy/: feature_contract.py  generator.py  model.pkl  predictor.py
genai-project/app/rtc/: rtc.py
genai-project/app/services/: ai_service.py  analyze_service.py  interview_service.py  ml_service.py  storage_service.py
genai-project/app/ui/: dashboard.py  dashboard_api.py
genai-project/app/ui_legacy/: dashboard.py  dashboard_api.py
genai-project/data/: train_dataset.csv
genai-project/examples/: candidate2.txt  candidate3.txt
genai-project/tests/: __init__.py  test_api.py
tests/: test_api.py
