[project]
name = "worker-selection-app"
version = "0.1.0"
description = "AI platform for industrial worker selection and retention prediction"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "colorama>=0.4.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "pydantic-settings>=2.7.0",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",

    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "catboost>=1.2.8",

    "faster-whisper>=1.2.1",

    "torch>=2.11.0",
    "transformers[torch]>=4.51.3,<5",
    "tokenizers>=0.21.1",
    "lm-format-enforcer>=0.11.3",
    "huggingface-hub>=0.30.0,<1.0",
    "accelerate>=1.0.0",
    "safetensors>=0.4.0",

    "setuptools<82",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.uv]
package = false