[project]
name = "worker-selection-app"
version = "0.1.0"
description = "AI platform for industrial worker selection and retention prediction"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "colorama>=0.4.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "pydantic-settings>=2.7.0",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "catboost>=1.2.8",
    "faster-whisper>=1.2.1",
    "torch>=2.11.0",
    "transformers[torch]>=5.8.1,<6",
    "tokenizers>=0.21.1",
    "huggingface-hub>=1.5,<2",
    "accelerate>=1.0.0",
    "safetensors>=0.4.0",
    "setuptools<82",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "bitsandbytes>=0.49.2",
    "webrtcvad>=2.0.10",
    "lm-format-enforcer>=0.11.3",
    "outlines>=1.3.0",
    "triton-windows>=3.6.0.post26",
    "silero>=0.5.5",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.uv]
package = false
